compilador.output
Useless nonterminals

   lista_de_expressoes
   chamada_de_procedimento
   sessao_parametros_ou_vazio


Terminals which are not used

   INTEIRO
   ABRE_COLCHETES
   FECHA_COLCHETES
   ABRE_CHAVES
   FECHA_CHAVES
   LABEL
   TYPE
   ARRAY
   PROCEDURE
   FUNCTION
   GOTO
   DIFERENTE


Useless rules

   75 lista_de_expressoes: lista_de_expressoes VIRGULA expressao
   76                    | expressao

   77 chamada_de_procedimento: IDENT sessao_parametros_ou_vazio

   78 sessao_parametros_ou_vazio: ABRE_PARENTESES lista_de_expressoes FECHA_PARENTESES
   79                           | /* empty */


State 20 conflicts: 1 reduce/reduce


Grammar

    0 $accept: programa $end

    1 @1: /* empty */

    2 programa: @1 PROGRAM IDENT ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO

    3 @2: /* empty */

    4 bloco: parte_declara_vars @2 comando_composto

    5 parte_declara_vars: var

    6 @3: /* empty */

    7 var: @3 VAR declara_vars
    8    | /* empty */

    9 declara_vars: declara_vars declara_var
   10             | declara_var

   11 @4: /* empty */

   12 @5: /* empty */

   13 declara_var: @4 lista_id_var DOIS_PONTOS tipo @5 PONTO_E_VIRGULA

   14 tipo: IDENT

   15 lista_id_var: lista_id_var VIRGULA IDENT
   16             | IDENT

   17 lista_idents: lista_idents VIRGULA IDENT
   18             | IDENT

   19 @6: /* empty */

   20 atribuicao: IDENT @6 atribui_variavel

   21 atribui_variavel: ATRIBUICAO expressao

   22 @7: /* empty */

   23 expressao: expressao @7 MAIOR expressao_simples

   24 @8: /* empty */

   25 expressao: expressao @8 MAIOR_OU_IGUAL expressao_simples

   26 @9: /* empty */

   27 expressao: expressao @9 MENOR expressao_simples

   28 @10: /* empty */

   29 expressao: expressao @10 MENOR_OU_IGUAL expressao_simples

   30 @11: /* empty */

   31 expressao: expressao @11 IGUAL expressao_simples
   32          | expressao_simples

   33 @12: /* empty */

   34 expressao_simples: expressao_simples @12 MAIS termo

   35 @13: /* empty */

   36 expressao_simples: expressao_simples @13 MENOS termo

   37 @14: /* empty */

   38 expressao_simples: expressao_simples @14 OR termo
   39                  | termo

   40 termo: fator lista_sinal_e_fator_ou_vazio

   41 lista_sinal_e_fator_ou_vazio: lista_sinal_e_fator
   42                             | /* empty */

   43 lista_sinal_e_fator: lista_sinal_e_fator sinal_lista_sinal_fator fator
   44                    | sinal_lista_sinal_fator fator

   45 sinal_lista_sinal_fator: VEZES
   46                        | DIV
   47                        | AND

   48 fator: NOT fator
   49      | variavel
   50      | NUMERO
   51      | ABRE_PARENTESES expressao FECHA_PARENTESES

   52 variavel: IDENT

   53 @15: /* empty */

   54 @16: /* empty */

   55 repeticao: WHILE @15 expressao @16 DO comando

   56 comando_composto: T_BEGIN comandos_ou_vazio T_END

   57 comandos_ou_vazio: comandos
   58                  | /* empty */

   59 comandos: comandos PONTO_E_VIRGULA comando
   60         | comando

   61 comando: comando_sem_rotulo

   62 comando_sem_rotulo: atribuicao
   63                   | comando_composto
   64                   | repeticao
   65                   | READ ABRE_PARENTESES lista_leitura FECHA_PARENTESES
   66                   | WRITE ABRE_PARENTESES lista_impressao FECHA_PARENTESES
   67                   | /* empty */

   68 lista_leitura: lista_leitura VIRGULA identificador
   69              | identificador

   70 lista_impressao: lista_impressao VIRGULA identificador
   71                | identificador
   72                | lista_impressao VIRGULA NUMERO
   73                | NUMERO

   74 identificador: IDENT


Terminals, with rules where they appear

$end (0) 0
error (256)
INTEIRO (258)
PROGRAM (259) 2
ABRE_PARENTESES (260) 2 51 65 66
FECHA_PARENTESES (261) 2 51 65 66
VIRGULA (262) 15 17 68 70 72
PONTO_E_VIRGULA (263) 2 13 59
DOIS_PONTOS (264) 13
PONTO (265) 2
NUMERO (266) 50 72 73
T_BEGIN (267) 56
T_END (268) 56
VAR (269) 7
IDENT (270) 2 14 15 16 17 18 20 52 74
ATRIBUICAO (271) 21
ABRE_COLCHETES (272)
FECHA_COLCHETES (273)
ABRE_CHAVES (274)
FECHA_CHAVES (275)
LABEL (276)
TYPE (277)
ARRAY (278)
PROCEDURE (279)
FUNCTION (280)
GOTO (281)
WHILE (282) 55
DO (283) 55
DIV (284) 46
AND (285) 47
NOT (286) 48
OR (287) 38
MENOR (288) 27
MAIOR (289) 23
DIFERENTE (290)
MAIOR_OU_IGUAL (291) 25
MENOR_OU_IGUAL (292) 29
IGUAL (293) 31
MENOS (294) 36
MAIS (295) 34
VEZES (296) 45
READ (297) 65
WRITE (298) 66


Nonterminals, with rules where they appear

$accept (44)
    on left: 0
programa (45)
    on left: 2, on right: 0
@1 (46)
    on left: 1, on right: 2
bloco (47)
    on left: 4, on right: 2
@2 (48)
    on left: 3, on right: 4
parte_declara_vars (49)
    on left: 5, on right: 4
var (50)
    on left: 7 8, on right: 5
@3 (51)
    on left: 6, on right: 7
declara_vars (52)
    on left: 9 10, on right: 7 9
declara_var (53)
    on left: 13, on right: 9 10
@4 (54)
    on left: 11, on right: 13
@5 (55)
    on left: 12, on right: 13
tipo (56)
    on left: 14, on right: 13
lista_id_var (57)
    on left: 15 16, on right: 13 15
lista_idents (58)
    on left: 17 18, on right: 2 17
atribuicao (59)
    on left: 20, on right: 62
@6 (60)
    on left: 19, on right: 20
atribui_variavel (61)
    on left: 21, on right: 20
expressao (62)
    on left: 23 25 27 29 31 32, on right: 21 23 25 27 29 31 51 55
@7 (63)
    on left: 22, on right: 23
@8 (64)
    on left: 24, on right: 25
@9 (65)
    on left: 26, on right: 27
@10 (66)
    on left: 28, on right: 29
@11 (67)
    on left: 30, on right: 31
expressao_simples (68)
    on left: 34 36 38 39, on right: 23 25 27 29 31 32 34 36 38
@12 (69)
    on left: 33, on right: 34
@13 (70)
    on left: 35, on right: 36
@14 (71)
    on left: 37, on right: 38
termo (72)
    on left: 40, on right: 34 36 38 39
lista_sinal_e_fator_ou_vazio (73)
    on left: 41 42, on right: 40
lista_sinal_e_fator (74)
    on left: 43 44, on right: 41 43
sinal_lista_sinal_fator (75)
    on left: 45 46 47, on right: 43 44
fator (76)
    on left: 48 49 50 51, on right: 40 43 44 48
variavel (77)
    on left: 52, on right: 49
repeticao (78)
    on left: 55, on right: 64
@15 (79)
    on left: 53, on right: 55
@16 (80)
    on left: 54, on right: 55
comando_composto (81)
    on left: 56, on right: 4 63
comandos_ou_vazio (82)
    on left: 57 58, on right: 56
comandos (83)
    on left: 59 60, on right: 57 59
comando (84)
    on left: 61, on right: 55 59 60
comando_sem_rotulo (85)
    on left: 62 63 64 65 66 67, on right: 61
lista_leitura (86)
    on left: 68 69, on right: 65 68
lista_impressao (87)
    on left: 70 71 72 73, on right: 66 70 72
identificador (88)
    on left: 74, on right: 68 69 70 71


state 0

    0 $accept: . programa $end

    $default  reduce using rule 1 (@1)

    programa  go to state 1
    @1        go to state 2


state 1

    0 $accept: programa . $end

    $end  shift, and go to state 3


state 2

    2 programa: @1 . PROGRAM IDENT ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO

    PROGRAM  shift, and go to state 4


state 3

    0 $accept: programa $end .

    $default  accept


state 4

    2 programa: @1 PROGRAM . IDENT ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO

    IDENT  shift, and go to state 5


state 5

    2 programa: @1 PROGRAM IDENT . ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO

    ABRE_PARENTESES  shift, and go to state 6


state 6

    2 programa: @1 PROGRAM IDENT ABRE_PARENTESES . lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO

    IDENT  shift, and go to state 7

    lista_idents  go to state 8


state 7

   18 lista_idents: IDENT .

    $default  reduce using rule 18 (lista_idents)


state 8

    2 programa: @1 PROGRAM IDENT ABRE_PARENTESES lista_idents . FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO
   17 lista_idents: lista_idents . VIRGULA IDENT

    FECHA_PARENTESES  shift, and go to state 9
    VIRGULA           shift, and go to state 10


state 9

    2 programa: @1 PROGRAM IDENT ABRE_PARENTESES lista_idents FECHA_PARENTESES . PONTO_E_VIRGULA bloco PONTO

    PONTO_E_VIRGULA  shift, and go to state 11


state 10

   17 lista_idents: lista_idents VIRGULA . IDENT

    IDENT  shift, and go to state 12


state 11

    2 programa: @1 PROGRAM IDENT ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA . bloco PONTO

    T_BEGIN   reduce using rule 8 (var)
    $default  reduce using rule 6 (@3)

    bloco               go to state 13
    parte_declara_vars  go to state 14
    var                 go to state 15
    @3                  go to state 16


state 12

   17 lista_idents: lista_idents VIRGULA IDENT .

    $default  reduce using rule 17 (lista_idents)


state 13

    2 programa: @1 PROGRAM IDENT ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco . PONTO

    PONTO  shift, and go to state 17


state 14

    4 bloco: parte_declara_vars . @2 comando_composto

    $default  reduce using rule 3 (@2)

    @2  go to state 18


state 15

    5 parte_declara_vars: var .

    $default  reduce using rule 5 (parte_declara_vars)


state 16

    7 var: @3 . VAR declara_vars

    VAR  shift, and go to state 19


state 17

    2 programa: @1 PROGRAM IDENT ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO .

    $default  reduce using rule 2 (programa)


state 18

    4 bloco: parte_declara_vars @2 . comando_composto

    T_BEGIN  shift, and go to state 20

    comando_composto  go to state 21


state 19

    7 var: @3 VAR . declara_vars

    $default  reduce using rule 11 (@4)

    declara_vars  go to state 22
    declara_var   go to state 23
    @4            go to state 24


state 20

   56 comando_composto: T_BEGIN . comandos_ou_vazio T_END

    T_BEGIN  shift, and go to state 20
    IDENT    shift, and go to state 25
    WHILE    shift, and go to state 26
    READ     shift, and go to state 27
    WRITE    shift, and go to state 28

    PONTO_E_VIRGULA  reduce using rule 67 (comando_sem_rotulo)
    T_END            reduce using rule 58 (comandos_ou_vazio)
    T_END            [reduce using rule 67 (comando_sem_rotulo)]
    $default         reduce using rule 58 (comandos_ou_vazio)

    atribuicao          go to state 29
    repeticao           go to state 30
    comando_composto    go to state 31
    comandos_ou_vazio   go to state 32
    comandos            go to state 33
    comando             go to state 34
    comando_sem_rotulo  go to state 35


state 21

    4 bloco: parte_declara_vars @2 comando_composto .

    $default  reduce using rule 4 (bloco)


state 22

    7 var: @3 VAR declara_vars .
    9 declara_vars: declara_vars . declara_var

    IDENT     reduce using rule 11 (@4)
    $default  reduce using rule 7 (var)

    declara_var  go to state 36
    @4           go to state 24


state 23

   10 declara_vars: declara_var .

    $default  reduce using rule 10 (declara_vars)


state 24

   13 declara_var: @4 . lista_id_var DOIS_PONTOS tipo @5 PONTO_E_VIRGULA

    IDENT  shift, and go to state 37

    lista_id_var  go to state 38


state 25

   20 atribuicao: IDENT . @6 atribui_variavel

    $default  reduce using rule 19 (@6)

    @6  go to state 39


state 26

   55 repeticao: WHILE . @15 expressao @16 DO comando

    $default  reduce using rule 53 (@15)

    @15  go to state 40


state 27

   65 comando_sem_rotulo: READ . ABRE_PARENTESES lista_leitura FECHA_PARENTESES

    ABRE_PARENTESES  shift, and go to state 41


state 28

   66 comando_sem_rotulo: WRITE . ABRE_PARENTESES lista_impressao FECHA_PARENTESES

    ABRE_PARENTESES  shift, and go to state 42


state 29

   62 comando_sem_rotulo: atribuicao .

    $default  reduce using rule 62 (comando_sem_rotulo)


state 30

   64 comando_sem_rotulo: repeticao .

    $default  reduce using rule 64 (comando_sem_rotulo)


state 31

   63 comando_sem_rotulo: comando_composto .

    $default  reduce using rule 63 (comando_sem_rotulo)


state 32

   56 comando_composto: T_BEGIN comandos_ou_vazio . T_END

    T_END  shift, and go to state 43


state 33

   57 comandos_ou_vazio: comandos .
   59 comandos: comandos . PONTO_E_VIRGULA comando

    PONTO_E_VIRGULA  shift, and go to state 44

    $default  reduce using rule 57 (comandos_ou_vazio)


state 34

   60 comandos: comando .

    $default  reduce using rule 60 (comandos)


state 35

   61 comando: comando_sem_rotulo .

    $default  reduce using rule 61 (comando)


state 36

    9 declara_vars: declara_vars declara_var .

    $default  reduce using rule 9 (declara_vars)


state 37

   16 lista_id_var: IDENT .

    $default  reduce using rule 16 (lista_id_var)


state 38

   13 declara_var: @4 lista_id_var . DOIS_PONTOS tipo @5 PONTO_E_VIRGULA
   15 lista_id_var: lista_id_var . VIRGULA IDENT

    VIRGULA      shift, and go to state 45
    DOIS_PONTOS  shift, and go to state 46


state 39

   20 atribuicao: IDENT @6 . atribui_variavel

    ATRIBUICAO  shift, and go to state 47

    atribui_variavel  go to state 48


state 40

   55 repeticao: WHILE @15 . expressao @16 DO comando

    ABRE_PARENTESES  shift, and go to state 49
    NUMERO           shift, and go to state 50
    IDENT            shift, and go to state 51
    NOT              shift, and go to state 52

    expressao          go to state 53
    expressao_simples  go to state 54
    termo              go to state 55
    fator              go to state 56
    variavel           go to state 57


state 41

   65 comando_sem_rotulo: READ ABRE_PARENTESES . lista_leitura FECHA_PARENTESES

    IDENT  shift, and go to state 58

    lista_leitura  go to state 59
    identificador  go to state 60


state 42

   66 comando_sem_rotulo: WRITE ABRE_PARENTESES . lista_impressao FECHA_PARENTESES

    NUMERO  shift, and go to state 61
    IDENT   shift, and go to state 58

    lista_impressao  go to state 62
    identificador    go to state 63


state 43

   56 comando_composto: T_BEGIN comandos_ou_vazio T_END .

    $default  reduce using rule 56 (comando_composto)


state 44

   59 comandos: comandos PONTO_E_VIRGULA . comando

    T_BEGIN  shift, and go to state 20
    IDENT    shift, and go to state 25
    WHILE    shift, and go to state 26
    READ     shift, and go to state 27
    WRITE    shift, and go to state 28

    $default  reduce using rule 67 (comando_sem_rotulo)

    atribuicao          go to state 29
    repeticao           go to state 30
    comando_composto    go to state 31
    comando             go to state 64
    comando_sem_rotulo  go to state 35


state 45

   15 lista_id_var: lista_id_var VIRGULA . IDENT

    IDENT  shift, and go to state 65


state 46

   13 declara_var: @4 lista_id_var DOIS_PONTOS . tipo @5 PONTO_E_VIRGULA

    IDENT  shift, and go to state 66

    tipo  go to state 67


state 47

   21 atribui_variavel: ATRIBUICAO . expressao

    ABRE_PARENTESES  shift, and go to state 49
    NUMERO           shift, and go to state 50
    IDENT            shift, and go to state 51
    NOT              shift, and go to state 52

    expressao          go to state 68
    expressao_simples  go to state 54
    termo              go to state 55
    fator              go to state 56
    variavel           go to state 57


state 48

   20 atribuicao: IDENT @6 atribui_variavel .

    $default  reduce using rule 20 (atribuicao)


state 49

   51 fator: ABRE_PARENTESES . expressao FECHA_PARENTESES

    ABRE_PARENTESES  shift, and go to state 49
    NUMERO           shift, and go to state 50
    IDENT            shift, and go to state 51
    NOT              shift, and go to state 52

    expressao          go to state 69
    expressao_simples  go to state 54
    termo              go to state 55
    fator              go to state 56
    variavel           go to state 57


state 50

   50 fator: NUMERO .

    $default  reduce using rule 50 (fator)


state 51

   52 variavel: IDENT .

    $default  reduce using rule 52 (variavel)


state 52

   48 fator: NOT . fator

    ABRE_PARENTESES  shift, and go to state 49
    NUMERO           shift, and go to state 50
    IDENT            shift, and go to state 51
    NOT              shift, and go to state 52

    fator     go to state 70
    variavel  go to state 57


state 53

   23 expressao: expressao . @7 MAIOR expressao_simples
   25          | expressao . @8 MAIOR_OU_IGUAL expressao_simples
   27          | expressao . @9 MENOR expressao_simples
   29          | expressao . @10 MENOR_OU_IGUAL expressao_simples
   31          | expressao . @11 IGUAL expressao_simples
   55 repeticao: WHILE @15 expressao . @16 DO comando

    DO              reduce using rule 54 (@16)
    MENOR           reduce using rule 26 (@9)
    MAIOR_OU_IGUAL  reduce using rule 24 (@8)
    MENOR_OU_IGUAL  reduce using rule 28 (@10)
    IGUAL           reduce using rule 30 (@11)
    $default        reduce using rule 22 (@7)

    @7   go to state 71
    @8   go to state 72
    @9   go to state 73
    @10  go to state 74
    @11  go to state 75
    @16  go to state 76


state 54

   32 expressao: expressao_simples .
   34 expressao_simples: expressao_simples . @12 MAIS termo
   36                  | expressao_simples . @13 MENOS termo
   38                  | expressao_simples . @14 OR termo

    OR        reduce using rule 37 (@14)
    MENOS     reduce using rule 35 (@13)
    MAIS      reduce using rule 33 (@12)
    $default  reduce using rule 32 (expressao)

    @12  go to state 77
    @13  go to state 78
    @14  go to state 79


state 55

   39 expressao_simples: termo .

    $default  reduce using rule 39 (expressao_simples)


state 56

   40 termo: fator . lista_sinal_e_fator_ou_vazio

    DIV    shift, and go to state 80
    AND    shift, and go to state 81
    VEZES  shift, and go to state 82

    $default  reduce using rule 42 (lista_sinal_e_fator_ou_vazio)

    lista_sinal_e_fator_ou_vazio  go to state 83
    lista_sinal_e_fator           go to state 84
    sinal_lista_sinal_fator       go to state 85


state 57

   49 fator: variavel .

    $default  reduce using rule 49 (fator)


state 58

   74 identificador: IDENT .

    $default  reduce using rule 74 (identificador)


state 59

   65 comando_sem_rotulo: READ ABRE_PARENTESES lista_leitura . FECHA_PARENTESES
   68 lista_leitura: lista_leitura . VIRGULA identificador

    FECHA_PARENTESES  shift, and go to state 86
    VIRGULA           shift, and go to state 87


state 60

   69 lista_leitura: identificador .

    $default  reduce using rule 69 (lista_leitura)


state 61

   73 lista_impressao: NUMERO .

    $default  reduce using rule 73 (lista_impressao)


state 62

   66 comando_sem_rotulo: WRITE ABRE_PARENTESES lista_impressao . FECHA_PARENTESES
   70 lista_impressao: lista_impressao . VIRGULA identificador
   72                | lista_impressao . VIRGULA NUMERO

    FECHA_PARENTESES  shift, and go to state 88
    VIRGULA           shift, and go to state 89


state 63

   71 lista_impressao: identificador .

    $default  reduce using rule 71 (lista_impressao)


state 64

   59 comandos: comandos PONTO_E_VIRGULA comando .

    $default  reduce using rule 59 (comandos)


state 65

   15 lista_id_var: lista_id_var VIRGULA IDENT .

    $default  reduce using rule 15 (lista_id_var)


state 66

   14 tipo: IDENT .

    $default  reduce using rule 14 (tipo)


state 67

   13 declara_var: @4 lista_id_var DOIS_PONTOS tipo . @5 PONTO_E_VIRGULA

    $default  reduce using rule 12 (@5)

    @5  go to state 90


state 68

   21 atribui_variavel: ATRIBUICAO expressao .
   23 expressao: expressao . @7 MAIOR expressao_simples
   25          | expressao . @8 MAIOR_OU_IGUAL expressao_simples
   27          | expressao . @9 MENOR expressao_simples
   29          | expressao . @10 MENOR_OU_IGUAL expressao_simples
   31          | expressao . @11 IGUAL expressao_simples

    MENOR           reduce using rule 26 (@9)
    MAIOR           reduce using rule 22 (@7)
    MAIOR_OU_IGUAL  reduce using rule 24 (@8)
    MENOR_OU_IGUAL  reduce using rule 28 (@10)
    IGUAL           reduce using rule 30 (@11)
    $default        reduce using rule 21 (atribui_variavel)

    @7   go to state 71
    @8   go to state 72
    @9   go to state 73
    @10  go to state 74
    @11  go to state 75


state 69

   23 expressao: expressao . @7 MAIOR expressao_simples
   25          | expressao . @8 MAIOR_OU_IGUAL expressao_simples
   27          | expressao . @9 MENOR expressao_simples
   29          | expressao . @10 MENOR_OU_IGUAL expressao_simples
   31          | expressao . @11 IGUAL expressao_simples
   51 fator: ABRE_PARENTESES expressao . FECHA_PARENTESES

    FECHA_PARENTESES  shift, and go to state 91

    MENOR           reduce using rule 26 (@9)
    MAIOR_OU_IGUAL  reduce using rule 24 (@8)
    MENOR_OU_IGUAL  reduce using rule 28 (@10)
    IGUAL           reduce using rule 30 (@11)
    $default        reduce using rule 22 (@7)

    @7   go to state 71
    @8   go to state 72
    @9   go to state 73
    @10  go to state 74
    @11  go to state 75


state 70

   48 fator: NOT fator .

    $default  reduce using rule 48 (fator)


state 71

   23 expressao: expressao @7 . MAIOR expressao_simples

    MAIOR  shift, and go to state 92


state 72

   25 expressao: expressao @8 . MAIOR_OU_IGUAL expressao_simples

    MAIOR_OU_IGUAL  shift, and go to state 93


state 73

   27 expressao: expressao @9 . MENOR expressao_simples

    MENOR  shift, and go to state 94


state 74

   29 expressao: expressao @10 . MENOR_OU_IGUAL expressao_simples

    MENOR_OU_IGUAL  shift, and go to state 95


state 75

   31 expressao: expressao @11 . IGUAL expressao_simples

    IGUAL  shift, and go to state 96


state 76

   55 repeticao: WHILE @15 expressao @16 . DO comando

    DO  shift, and go to state 97


state 77

   34 expressao_simples: expressao_simples @12 . MAIS termo

    MAIS  shift, and go to state 98


state 78

   36 expressao_simples: expressao_simples @13 . MENOS termo

    MENOS  shift, and go to state 99


state 79

   38 expressao_simples: expressao_simples @14 . OR termo

    OR  shift, and go to state 100


state 80

   46 sinal_lista_sinal_fator: DIV .

    $default  reduce using rule 46 (sinal_lista_sinal_fator)


state 81

   47 sinal_lista_sinal_fator: AND .

    $default  reduce using rule 47 (sinal_lista_sinal_fator)


state 82

   45 sinal_lista_sinal_fator: VEZES .

    $default  reduce using rule 45 (sinal_lista_sinal_fator)


state 83

   40 termo: fator lista_sinal_e_fator_ou_vazio .

    $default  reduce using rule 40 (termo)


state 84

   41 lista_sinal_e_fator_ou_vazio: lista_sinal_e_fator .
   43 lista_sinal_e_fator: lista_sinal_e_fator . sinal_lista_sinal_fator fator

    DIV    shift, and go to state 80
    AND    shift, and go to state 81
    VEZES  shift, and go to state 82

    $default  reduce using rule 41 (lista_sinal_e_fator_ou_vazio)

    sinal_lista_sinal_fator  go to state 101


state 85

   44 lista_sinal_e_fator: sinal_lista_sinal_fator . fator

    ABRE_PARENTESES  shift, and go to state 49
    NUMERO           shift, and go to state 50
    IDENT            shift, and go to state 51
    NOT              shift, and go to state 52

    fator     go to state 102
    variavel  go to state 57


state 86

   65 comando_sem_rotulo: READ ABRE_PARENTESES lista_leitura FECHA_PARENTESES .

    $default  reduce using rule 65 (comando_sem_rotulo)


state 87

   68 lista_leitura: lista_leitura VIRGULA . identificador

    IDENT  shift, and go to state 58

    identificador  go to state 103


state 88

   66 comando_sem_rotulo: WRITE ABRE_PARENTESES lista_impressao FECHA_PARENTESES .

    $default  reduce using rule 66 (comando_sem_rotulo)


state 89

   70 lista_impressao: lista_impressao VIRGULA . identificador
   72                | lista_impressao VIRGULA . NUMERO

    NUMERO  shift, and go to state 104
    IDENT   shift, and go to state 58

    identificador  go to state 105


state 90

   13 declara_var: @4 lista_id_var DOIS_PONTOS tipo @5 . PONTO_E_VIRGULA

    PONTO_E_VIRGULA  shift, and go to state 106


state 91

   51 fator: ABRE_PARENTESES expressao FECHA_PARENTESES .

    $default  reduce using rule 51 (fator)


state 92

   23 expressao: expressao @7 MAIOR . expressao_simples

    ABRE_PARENTESES  shift, and go to state 49
    NUMERO           shift, and go to state 50
    IDENT            shift, and go to state 51
    NOT              shift, and go to state 52

    expressao_simples  go to state 107
    termo              go to state 55
    fator              go to state 56
    variavel           go to state 57


state 93

   25 expressao: expressao @8 MAIOR_OU_IGUAL . expressao_simples

    ABRE_PARENTESES  shift, and go to state 49
    NUMERO           shift, and go to state 50
    IDENT            shift, and go to state 51
    NOT              shift, and go to state 52

    expressao_simples  go to state 108
    termo              go to state 55
    fator              go to state 56
    variavel           go to state 57


state 94

   27 expressao: expressao @9 MENOR . expressao_simples

    ABRE_PARENTESES  shift, and go to state 49
    NUMERO           shift, and go to state 50
    IDENT            shift, and go to state 51
    NOT              shift, and go to state 52

    expressao_simples  go to state 109
    termo              go to state 55
    fator              go to state 56
    variavel           go to state 57


state 95

   29 expressao: expressao @10 MENOR_OU_IGUAL . expressao_simples

    ABRE_PARENTESES  shift, and go to state 49
    NUMERO           shift, and go to state 50
    IDENT            shift, and go to state 51
    NOT              shift, and go to state 52

    expressao_simples  go to state 110
    termo              go to state 55
    fator              go to state 56
    variavel           go to state 57


state 96

   31 expressao: expressao @11 IGUAL . expressao_simples

    ABRE_PARENTESES  shift, and go to state 49
    NUMERO           shift, and go to state 50
    IDENT            shift, and go to state 51
    NOT              shift, and go to state 52

    expressao_simples  go to state 111
    termo              go to state 55
    fator              go to state 56
    variavel           go to state 57


state 97

   55 repeticao: WHILE @15 expressao @16 DO . comando

    T_BEGIN  shift, and go to state 20
    IDENT    shift, and go to state 25
    WHILE    shift, and go to state 26
    READ     shift, and go to state 27
    WRITE    shift, and go to state 28

    $default  reduce using rule 67 (comando_sem_rotulo)

    atribuicao          go to state 29
    repeticao           go to state 30
    comando_composto    go to state 31
    comando             go to state 112
    comando_sem_rotulo  go to state 35


state 98

   34 expressao_simples: expressao_simples @12 MAIS . termo

    ABRE_PARENTESES  shift, and go to state 49
    NUMERO           shift, and go to state 50
    IDENT            shift, and go to state 51
    NOT              shift, and go to state 52

    termo     go to state 113
    fator     go to state 56
    variavel  go to state 57


state 99

   36 expressao_simples: expressao_simples @13 MENOS . termo

    ABRE_PARENTESES  shift, and go to state 49
    NUMERO           shift, and go to state 50
    IDENT            shift, and go to state 51
    NOT              shift, and go to state 52

    termo     go to state 114
    fator     go to state 56
    variavel  go to state 57


state 100

   38 expressao_simples: expressao_simples @14 OR . termo

    ABRE_PARENTESES  shift, and go to state 49
    NUMERO           shift, and go to state 50
    IDENT            shift, and go to state 51
    NOT              shift, and go to state 52

    termo     go to state 115
    fator     go to state 56
    variavel  go to state 57


state 101

   43 lista_sinal_e_fator: lista_sinal_e_fator sinal_lista_sinal_fator . fator

    ABRE_PARENTESES  shift, and go to state 49
    NUMERO           shift, and go to state 50
    IDENT            shift, and go to state 51
    NOT              shift, and go to state 52

    fator     go to state 116
    variavel  go to state 57


state 102

   44 lista_sinal_e_fator: sinal_lista_sinal_fator fator .

    $default  reduce using rule 44 (lista_sinal_e_fator)


state 103

   68 lista_leitura: lista_leitura VIRGULA identificador .

    $default  reduce using rule 68 (lista_leitura)


state 104

   72 lista_impressao: lista_impressao VIRGULA NUMERO .

    $default  reduce using rule 72 (lista_impressao)


state 105

   70 lista_impressao: lista_impressao VIRGULA identificador .

    $default  reduce using rule 70 (lista_impressao)


state 106

   13 declara_var: @4 lista_id_var DOIS_PONTOS tipo @5 PONTO_E_VIRGULA .

    $default  reduce using rule 13 (declara_var)


state 107

   23 expressao: expressao @7 MAIOR expressao_simples .
   34 expressao_simples: expressao_simples . @12 MAIS termo
   36                  | expressao_simples . @13 MENOS termo
   38                  | expressao_simples . @14 OR termo

    OR        reduce using rule 37 (@14)
    MENOS     reduce using rule 35 (@13)
    MAIS      reduce using rule 33 (@12)
    $default  reduce using rule 23 (expressao)

    @12  go to state 77
    @13  go to state 78
    @14  go to state 79


state 108

   25 expressao: expressao @8 MAIOR_OU_IGUAL expressao_simples .
   34 expressao_simples: expressao_simples . @12 MAIS termo
   36                  | expressao_simples . @13 MENOS termo
   38                  | expressao_simples . @14 OR termo

    OR        reduce using rule 37 (@14)
    MENOS     reduce using rule 35 (@13)
    MAIS      reduce using rule 33 (@12)
    $default  reduce using rule 25 (expressao)

    @12  go to state 77
    @13  go to state 78
    @14  go to state 79


state 109

   27 expressao: expressao @9 MENOR expressao_simples .
   34 expressao_simples: expressao_simples . @12 MAIS termo
   36                  | expressao_simples . @13 MENOS termo
   38                  | expressao_simples . @14 OR termo

    OR        reduce using rule 37 (@14)
    MENOS     reduce using rule 35 (@13)
    MAIS      reduce using rule 33 (@12)
    $default  reduce using rule 27 (expressao)

    @12  go to state 77
    @13  go to state 78
    @14  go to state 79


state 110

   29 expressao: expressao @10 MENOR_OU_IGUAL expressao_simples .
   34 expressao_simples: expressao_simples . @12 MAIS termo
   36                  | expressao_simples . @13 MENOS termo
   38                  | expressao_simples . @14 OR termo

    OR        reduce using rule 37 (@14)
    MENOS     reduce using rule 35 (@13)
    MAIS      reduce using rule 33 (@12)
    $default  reduce using rule 29 (expressao)

    @12  go to state 77
    @13  go to state 78
    @14  go to state 79


state 111

   31 expressao: expressao @11 IGUAL expressao_simples .
   34 expressao_simples: expressao_simples . @12 MAIS termo
   36                  | expressao_simples . @13 MENOS termo
   38                  | expressao_simples . @14 OR termo

    OR        reduce using rule 37 (@14)
    MENOS     reduce using rule 35 (@13)
    MAIS      reduce using rule 33 (@12)
    $default  reduce using rule 31 (expressao)

    @12  go to state 77
    @13  go to state 78
    @14  go to state 79


state 112

   55 repeticao: WHILE @15 expressao @16 DO comando .

    $default  reduce using rule 55 (repeticao)


state 113

   34 expressao_simples: expressao_simples @12 MAIS termo .

    $default  reduce using rule 34 (expressao_simples)


state 114

   36 expressao_simples: expressao_simples @13 MENOS termo .

    $default  reduce using rule 36 (expressao_simples)


state 115

   38 expressao_simples: expressao_simples @14 OR termo .

    $default  reduce using rule 38 (expressao_simples)


state 116

   43 lista_sinal_e_fator: lista_sinal_e_fator sinal_lista_sinal_fator fator .

    $default  reduce using rule 43 (lista_sinal_e_fator)
